[gd_scene load_steps=10 format=4 uid="uid://do6w7n32srbju"]

[ext_resource type="Script" uid="uid://dd1dufaojsi8b" path="res://rooms/main_menu.gd" id="1_d4ivp"]
[ext_resource type="Shader" uid="uid://db5rdkn4ql71p" path="res://assets/shaders/DynamicFogShader.gdshader" id="1_quf3u"]
[ext_resource type="Texture2D" uid="uid://dfwe4bprfws7e" path="res://assets/tilesets/grass.png" id="2_k17sd"]
[ext_resource type="Texture2D" uid="uid://densnk70uvhip" path="res://assets/images/pigs1.png" id="4_ej13v"]
[ext_resource type="Texture2D" uid="uid://cg3xscdhor54y" path="res://assets/images/pigs2.png" id="5_ocnmw"]
[ext_resource type="Texture2D" uid="uid://c61l432muhl2d" path="res://characters/amy_steak/Amy Steak.png" id="6_ocnmw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k17sd"]
shader = ExtResource("1_quf3u")
shader_parameter/resolution = Vector2(320, 180)
shader_parameter/octave_count = 5
shader_parameter/amp_start = 0.61999998614176
shader_parameter/amp_coeff = 0.05999999865888
shader_parameter/freq_coeff = 9.99999977648
shader_parameter/zoom = 8.709999809039399
shader_parameter/speed = 1.0
shader_parameter/alpha = 1.0
shader_parameter/base_color = Color(0.21176471, 0.77254903, 1, 1)
shader_parameter/p_color = Color(0, 1, 0.6784314, 1)
shader_parameter/q_color = Color(0.7176471, 0.37254903, 0.99607843, 1)
shader_parameter/f_color = Color(1, 1, 1, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_d4ivp"]
resource_name = "Grass"
texture = ExtResource("2_k17sd")
texture_region_size = Vector2i(100, 100)
0:0/next_alternative_id = 4
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(50, 50, -25, 50, -25, -25, 50, -25)
0:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/next_alternative_id = 4
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -25, 50, -25, 50, 50, -50, 50)
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -25, 25, -25, 25, 50, -50, 50)
2:0/0/terrains_peering_bit/bottom_left_corner = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-25, -50, -25, 50, 50, 50, 50, -50)
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, -50, 50, 50, 50, 50, -50)
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(25, -50, 25, 50, -50, 50, -50, -50)
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(50, 25, -25, 25, -25, -50, 50, -50)
0:2/0/terrains_peering_bit/top_right_corner = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(50, 25, -50, 25, -50, -50, 50, -50)
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(25, -50, 25, 25, -50, 25, -50, -50)
2:2/0/terrains_peering_bit/top_left_corner = 0

[sub_resource type="TileSet" id="TileSet_22gix"]
tile_size = Vector2i(100, 100)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 255
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_d4ivp")

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_d4ivp")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_k17sd")
offset_left = -49.0
offset_top = -17.0
offset_right = 1360.0
offset_bottom = 776.0
mouse_filter = 2
color = Color(1, 0.99607843, 1, 1)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(0, -8)
tile_map_data = PackedByteArray("AAANAAcAAAABAAEAAAAMAAcAAAABAAEAAAALAAcAAAABAAEAAAAKAAcAAAABAAEAAAAJAAcAAAABAAEAAAAIAAcAAAABAAEAAAAHAAcAAAABAAEAAAAGAAcAAAABAAEAAAAFAAcAAAABAAEAAAAEAAcAAAABAAEAAAADAAcAAAABAAEAAAACAAcAAAABAAEAAAABAAcAAAABAAEAAAAAAAcAAAABAAEAAAD//wcAAAABAAEAAAAAAAgAAAABAAIAAAD//wgAAAABAAIAAAD+/wgAAAAAAAIAAAD+/wcAAAAAAAEAAAD+/wYAAAAAAAAAAAD//wYAAAABAAAAAAAAAAYAAAABAAAAAAABAAgAAAABAAIAAAABAAYAAAABAAAAAAACAAgAAAABAAIAAAACAAYAAAABAAAAAAADAAgAAAABAAIAAAADAAYAAAABAAAAAAAEAAgAAAABAAIAAAAEAAYAAAABAAAAAAAFAAgAAAABAAIAAAAFAAYAAAABAAAAAAAGAAgAAAABAAIAAAAGAAYAAAABAAAAAAAHAAgAAAABAAIAAAAHAAYAAAABAAAAAAAIAAgAAAABAAIAAAAIAAYAAAABAAAAAAAJAAgAAAABAAIAAAAJAAYAAAABAAAAAAAKAAgAAAABAAIAAAAKAAYAAAABAAAAAAALAAgAAAABAAIAAAALAAYAAAABAAAAAAAMAAgAAAABAAIAAAAMAAYAAAABAAAAAAANAAgAAAABAAIAAAANAAYAAAABAAAAAAAOAAcAAAACAAEAAAAOAAgAAAACAAIAAAAOAAYAAAACAAAAAAA=")
tile_set = SubResource("TileSet_22gix")

[node name="PLAYBUTTON" type="Button" parent="."]
offset_left = 425.0
offset_top = 418.0
offset_right = 857.0
offset_bottom = 532.0
theme_override_constants/outline_size = 40
theme_override_font_sizes/font_size = 50
text = "Press to PLAY"

[node name="Pigs1" type="Sprite2D" parent="."]
position = Vector2(169, 569)
rotation = -0.17453292
texture = ExtResource("4_ej13v")

[node name="oink1" type="Button" parent="Pigs1"]
offset_left = -134.17902
offset_top = -77.49255
offset_right = 142.77115
offset_bottom = 59.87509
focus_mode = 0
flat = true

[node name="Pigs2" type="Sprite2D" parent="."]
position = Vector2(1037.9999, 538.99994)
scale = Vector2(1.269565, 1.3125)
texture = ExtResource("5_ocnmw")

[node name="oink2" type="Button" parent="Pigs2"]
offset_left = -53.561523
offset_top = -64.76187
offset_right = 94.52063
offset_bottom = 69.333405
focus_mode = 0
flat = true

[node name="oink" type="AudioStreamPlayer2D" parent="."]
position = Vector2(634, 549)
volume_db = 20.0

[node name="Label4" type="Label" parent="."]
offset_left = 527.0
offset_top = 624.0
offset_right = 808.0
offset_bottom = 698.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = -10
theme_override_font_sizes/font_size = 30
text = "turn on volume
best w headphones"
horizontal_alignment = 1

[node name="TITLE" type="Label" parent="."]
offset_left = -47.0
offset_top = -58.0
offset_right = 1317.0
offset_bottom = 351.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 200
theme_override_font_sizes/font_size = 300
text = "SWYN 1.2"

[node name="TITLE2" type="Label" parent="TITLE"]
layout_mode = 0
offset_right = 1137.0
offset_bottom = 342.0
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 50
theme_override_font_sizes/font_size = 300
text = "SWYN 1.2"
metadata/_edit_lock_ = true

[node name="author" type="Label" parent="."]
offset_left = 505.0
offset_top = 250.0
offset_right = 778.0
offset_bottom = 319.0
theme_override_constants/outline_size = 50
theme_override_font_sizes/font_size = 50
text = "by Len.icon"

[node name="AmySteak" type="Sprite2D" parent="."]
position = Vector2(1351, 550)
scale = Vector2(0.625, 0.6019608)
texture = ExtResource("6_ocnmw")

[node name="moo" type="Button" parent="AmySteak"]
offset_left = -180.79993
offset_top = -96.351776
offset_right = 94.52063
offset_bottom = 111.30289
focus_mode = 0
flat = true

[connection signal="pressed" from="PLAYBUTTON" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Pigs1/oink1" to="." method="_on_oink_pressed"]
[connection signal="pressed" from="Pigs2/oink2" to="." method="_on_oink_pressed"]
[connection signal="pressed" from="AmySteak/moo" to="." method="_on_moo_pressed"]
